<resources>
    <string name="app_name">prsystem</string>
    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_notice">Notice</string>
    <string name="nav_item_stu_manage">학생관리</string>
    <string name="nav_item_Student">Notice</string>
    <!--<string name="nav_item_notifications">Messages</string>-->
    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_notice</item>
        <item>@string/nav_item_stu_manage</item>
    </string-array>

    <string name="title_stu_manage">manage</string>
    <string name="title_notice">Notice</string>
    <string name="title_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Regist-->
    <string name="hint_name">이름</string>
    <string name="hint_id">아이디</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_check">비밀번호 재확인</string>
    <string name="hint_phone">휴대전화번호</string>
    <string name="btn_sign_up">가입하기</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

</resources>
